# fast_zero_course_duno

./: .dockerignore  .gitignore  Dockerfile  compose.yaml  entrypoint.sh  fly.toml  pyproject.toml
.github/workflows/: pipeline.yaml
fast_zero/: annotated_types.py  app.py  decorators.py  models.py  schemas.py  security.py  settings.py
fast_zero/routers/: auth.py  todo.py  users.py
migrations/: env.py
migrations/versions/: 53b9e2fa8bb1_create_users_table.py  ac038a3a2983_create_todos_table.py  dd65504fe3b4_add_created_at_and_updated_at_on_todo.py  f513990d72cf_add_updated_at_field_to_user.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_todos.py  test_users.py
